Worked on unit test for JPA;

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,8 +9,11 @@
     Invalid username and password.
 </div>
 <div th:if="${param.logout}">
-    You have been logged out.
+    You have been logged out. 
 </div>
+
+<p th:text="'We have' + ${userCount} + ' users'"/>
+
 <form th:action="@{/login}" method="post">
     <div><label> User Name : <input type="text" name="username"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
